--- a/1-Python Basics/1.0-basic.ipynb
+++ b/1-Python Basics/1.0-basic.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,12 +40,13 @@
    "source": [
     "## Basic Syntax Rules In Python\n",
     "## Case sensitivity- Python is case sensitive\n",
+    "## Variables store informations \n",
     "\n",
     "name=\"Krish\"\n",
     "Name=\"Naik\"\n",
     "\n",
     "print(name)\n",
-    "print(Name)\n"
+    "print(Name)"
    ]
   },
   {
@@ -300,7 +301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -314,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
